cmake_minimum_required(VERSION 3.29)
project(zoo_project)

set(CMAKE_CXX_STANDARD 20)

add_executable(zoo_project src/main.cpp
        src/domain/entities/player.cpp
        src/domain/entities/player.h
        src/map/map.cpp
        src/map/map.h
        src/map/levels.cpp
        src/map/levels.h
        src/map/position.h
        src/ui/menu.cpp
        src/ui/menu.h
        src/application.cpp
        src/application.h
        src/domain/value_objects/role.h
        src/game.cpp
        src/game.h
        src/domain/value_objects/Screen.h
        src/domain/value_objects/doorPosition.h
        src/ui/scenes.cpp
        src/ui/scenes.h
        src/tools/globalSettings.cpp
        src/tools/globalSettings.h
        src/domain/entities/playerBuilder/playerBuilder.cpp
        src/domain/entities/playerBuilder/playerBuilder.h
        src/domain/entities/playerBuilder/warriorBuilder.cpp
        src/domain/entities/playerBuilder/warriorBuilder.h
        src/domain/entities/playerBuilder/playerDirector.cpp
        src/domain/entities/playerBuilder/playerDirector.h
        src/domain/entities/playerBuilder/archerBuilder.cpp
        src/domain/entities/playerBuilder/archerBuilder.h
        src/domain/entities/playerBuilder/mageBuilder.cpp
        src/domain/entities/playerBuilder/mageBuilder.h
        src/domain/entities/enemy.cpp
        src/domain/entities/enemy.h
        src/domain/value_objects/enemyType.h
        src/domain/entities/merchant.cpp
        src/domain/entities/merchant.h
        src/domain/entities/prisoner.cpp
        src/domain/entities/prisoner.h
        src/ui/shop.cpp
        src/ui/shop.h
        src/commands/add_enemy.cpp
        src/commands/add_enemy.h
        src/domain/entities/mummy.cpp
        src/domain/entities/mummy.h
        src/domain/entities/entity.cpp
        src/domain/entities/entity.h
        src/commands/add_merchant.cpp
        src/commands/add_merchant.h
        src/commands/add_prisoner.cpp
        src/commands/add_prisoner.h
        src/domain/entities/basilisk.cpp
        src/domain/entities/basilisk.h
        src/domain/value_objects/items/weapon.cpp
        src/domain/value_objects/items/weapon.h
        src/domain/value_objects/items/armor.cpp
        src/domain/value_objects/items/armor.h
        src/domain/value_objects/items/potion.cpp
        src/domain/value_objects/items/potion.h
        src/domain/entities/ghoul.cpp
        src/domain/entities/ghoul.h
        src/domain/entities/gargoil.cpp
        src/domain/entities/gargoil.h
        src/domain/entities/necromancer.cpp
        src/domain/entities/necromancer.h
)
