cmake_minimum_required(VERSION 3.29)
project(zoo_project)

set(CMAKE_CXX_STANDARD 20)

add_executable(zoo_project src/main.cpp
        src/domain/entities/player.cpp
        src/domain/entities/player.h
        src/map/map.cpp
        src/map/map.h
        src/map/levels.cpp
        src/map/levels.h
        src/map/position.h
        src/ui/menu.cpp
        src/ui/menu.h
        src/application.cpp
        src/application.h
        src/domain/value_objects/role.h
        src/game.cpp
        src/game.h
        src/domain/value_objects/screen.h
        src/domain/value_objects/door_position.h
        src/ui/scenes.cpp
        src/ui/scenes.h
        src/tools/global_settings.cpp
        src/tools/global_settings.h
        src/domain/entities/player_builder/player_builder.cpp
        src/domain/entities/player_builder/player_builder.h
        src/domain/entities/player_builder/warrior_builder.cpp
        src/domain/entities/player_builder/warrior_builder.h
        src/domain/entities/player_builder/player_director.cpp
        src/domain/entities/player_builder/player_director.h
        src/domain/entities/player_builder/archer_builder.cpp
        src/domain/entities/player_builder/archer_builder.h
        src/domain/entities/player_builder/mage_builder.cpp
        src/domain/entities/player_builder/mage_builder.h
        src/domain/entities/enemy.cpp
        src/domain/entities/enemy.h
        src/domain/value_objects/enemy_type.h
        src/domain/value_objects/merchant.cpp
        src/domain/value_objects/merchant.h
        src/domain/entities/prisoner.cpp
        src/domain/entities/prisoner.h
        src/ui/shop.cpp
        src/ui/shop.h
        src/commands/add_enemy.cpp
        src/commands/add_enemy.h
        src/domain/entities/mummy.cpp
        src/domain/entities/mummy.h
        src/domain/entities/entity.cpp
        src/domain/entities/entity.h
        src/commands/add_merchant.cpp
        src/commands/add_merchant.h
        src/commands/add_prisoner.cpp
        src/commands/add_prisoner.h
        src/domain/entities/basilisk.cpp
        src/domain/entities/basilisk.h
        src/domain/value_objects/items/weapon.cpp
        src/domain/value_objects/items/weapon.h
        src/domain/value_objects/items/armor.cpp
        src/domain/value_objects/items/armor.h
        src/domain/value_objects/items/potion.cpp
        src/domain/value_objects/items/potion.h
        src/domain/entities/ghoul.cpp
        src/domain/entities/ghoul.h
        src/domain/entities/gargoyle.cpp
        src/domain/entities/gargoyle.h
        src/domain/entities/necromancer.cpp
        src/domain/entities/necromancer.h
        src/interactions/merchant_interaction.cpp
        src/interactions/merchant_interaction.h
)
